# forecasting

./: .gitignore  1.air_passangers.ipynb  1.eda.ipynb  1.sythentic_data.ipynb  2.air_passangers.ipynb  2.stats_modelling.ipynb  2.sythentic_data.ipynb  3.ml_modelling.ipynb  4.decomp_mstl_ml.ipynb  5.power_curve.ipynb  README.md  eda.ipynb  mstl.py  pyproject.toml  stability.py  utils.py
feature_engineering_chapter/: STL_decomposition.ipynb  Visual_CI_ACF_PACF_vs_Ljung_Box_Comparison.ipynb  air_passengers.ipynb  holidays.ipynb
