[project]
name = "forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.0.1",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "statsforecast>=2.0.2",
    "tinyshift>=0.7.6",
]
